# cargo-jam

./: .gitignore  Cargo.toml  README.md  jam-faq.md  learn-jam.md
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs
src/cli/commands/: build.rs  deploy.rs  down.rs  mod.rs  monitor.rs  new.rs  setup.rs  test.rs  up.rs
src/project/: generator.rs  git_init.rs  mod.rs  validation.rs
src/prompt/: interactive.rs  mod.rs  values.rs
src/template/: bundled.rs  config.rs  engine.rs  git.rs  mod.rs
src/toolchain/: config.rs  download.rs  mod.rs  platform.rs
templates/basic-service/: Cargo.toml.liquid  README.md.liquid  cargo-jam.toml  cargo-polkajam.toml
templates/basic-service/.cargo/: config.toml.liquid
templates/basic-service/src/: lib.rs.liquid
tests/: integration_tests.rs  testnet_tests.rs
