[package]
name = "cargo-jam"
version = "0.1.0"
edition = "2021"
authors = ["Abutlabs"]
license = "Apache-2.0"
description = "A cargo subcommand for generating JAM service projects for Polkadot"
repository = "https://github.com/abutlabs/cargo-jam"
keywords = ["cargo", "jam", "polkadot", "pvm", "risc-v"]
categories = ["development-tools::cargo-plugins"]
readme = "README.md"

[[bin]]
name = "cargo-jam"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.15"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
indicatif = "0.17"

# Templating
liquid = "0.26"
liquid-core = "0.26"
liquid-derive = "0.26"

# Git operations
git2 = { version = "0.19", default-features = false, features = ["https", "ssh"] }

# Serialization/Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# File handling
include_dir = { version = "0.7", features = ["glob"] }
walkdir = "2.5"
glob = "0.3"
tempfile = "3.14"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
regex = "1.11"
heck = "0.5"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
flate2 = "1.0"
tar = "0.4"
zip = "2.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
dirs = "5.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
